--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/bj"
+    android:background="@drawable/bp"
     android:layout_height="match_parent"
     android:id="@+id/root_element"
     tools:context=".MainActivity">
@@ -14,25 +14,52 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="135dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/u4et"
         android:textColor="@color/text_bottom"
         android:textSize="12sp" />
 
+    <CheckBox
+        android:id="@+id/checkboxMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="150dp"
+        android:text="сохранить пароль"
+        android:textColor="@color/text_bottom"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/text_Bottom1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="600dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/dobro"
+        android:textColor="@color/text_bottom"
+        android:textSize="25sp" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:weightSum="2"
-        android:layout_above="@+id/text_Bottom"
-        android:layout_margin="15dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal">
+        android:layout_above="@+id/text_Bottom"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="500dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
 
         <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="wrap_content"
+            android:layout_width="164dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="6dp"
             android:layout_marginRight="6dp"
@@ -45,11 +72,11 @@
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="wrap_content"
+            android:layout_width="215dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:layout_marginLeft="6dp"
-            android:layout_weight="1"
+            android:layout_weight="-1"
             android:background="@drawable/btn_register"
             android:fontFamily="@font/montserrat"
             android:text="@string/btnRegister"
