--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -59,7 +59,21 @@
             app:met_floatingLabel="highlight"
             app:met_baseColor="#0056d3"
             app:met_primaryColor="#982360"
+            app:met_singleLineEllipsis="true"/>
 
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneField"
+            android:hint="Телефон"
+            android:inputType="phone"
+            android:text=""
+            android:textColor="@color/purple_200"
+            android:textColorHint="@color/design_default_color_primary_dark"
+            android:textSize="20sp"
+            app:met_floatingLabel="highlight"
+            app:met_baseColor="#0056d3"
+            app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true"/>
 
     </LinearLayout>
